site/css/components/loading.css
.loading-item {
  margin: 0.5em 0;
  height: 1em;
  border-radius: 3px;
  background-color: currentColor;
  color: #222;
  position: relative;
  overflow: hidden;
  display: block;
}

.loading-item::after {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  content: '';

  transform: translateX(-100%);
  background: linear-gradient(90deg, currentColor 0%, #333 50%, currentColor 100%);
  animation: shimmer 3s infinite;
}

@keyframes shimmer {
  100% {
    transform: translateX(100%);
  }
}

